# crane-bug

./: Cargo.toml  flake.nix
crane-test-crate/: Cargo.toml
crane-test-crate/src/: main.rs
