[package]
name = "crane-test-crate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "crane-bug"
path = "src/main.rs"

[dependencies]
serde = "1"
